--- a/firstRestFulApp/nodetest2/package.json
+++ b/firstRestFulApp/nodetest2/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "mongodb": "^3.1.13",
     "monk": "^6.0.6",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "nodemon": "^1.18.9"
   }
 }
