--- a/fileUploadByNodeAndReact/frontend/package.json
+++ b/fileUploadByNodeAndReact/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "form-data": "^2.3.3",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-scripts": "2.1.3"
